--- a/less/variables.less
+++ b/less/variables.less
@@ -1,11 +1,11 @@
 // Variables
 
 // Color pointers
-@nav-bg-color: @granite-gray;
-@nav-font-color: @dark-cerulean;
-@nav-border-color: @platinum;
-
 @header-font-color: @rich-black;
+
+@nav-font-color: @platinum;
+@nav-bg-color: @granite-gray;
+@nav-border-color: @platinum;
 
 @main-font-color: @rich-black;
 @main-border-color: @platinum;
@@ -15,15 +15,6 @@
 @footer-border-color: @platinum;
 
 // Color Vars
-// @wild-sand: #F6F6F6;
-// @river-bend: #454A59;
-// @sea-shell: #F1F1F1;
-// @ebony-clay: #23293B;
-// @shuttle-gray: #5E6164;
-// @porcelain: #F6F7F8;
-// @waterloo: #81848E;
-// @btn-bg-color: #22283A;
-// @border-real: #dee2e6;
 @coral-red: #FB3640;
 @rich-black: #04080F;
 @granite-gray: #605F5E;
