--- a/less/footer.less
+++ b/less/footer.less
@@ -4,7 +4,7 @@ footer {
   background: @footer-bg-color;
   padding: 20px 0;
   border: 1px double @footer-border-color;
-  border-radius: 10px;
+  // border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
