--- a/less/global.less
+++ b/less/global.less
@@ -4,10 +4,10 @@
 }
 
 html {
-  font-size: 62.5%;
-  // font-size: calc(10px + 0.25vw);
+  // font-size: 62.5%;
+  font-size: calc(10px + 0.25vw);
   @media @desktop4k {
-    font-size: calc(10px + 0.3334vw);
+    font-size: calc(10px + 0.33vw);
   }
 }
 
@@ -15,6 +15,8 @@ body {
   font-family: 'Montserrat', sans-serif;
   color: @main-font-color;
   min-width: 300px;
+  background: linear-gradient(@dark-cerulean, @cyan-azure, @pale-aqua, white);
+  background-repeat: no-repeat;
 }
 
 h1, h2, h3, h4, h5 {
