--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,51 +1,182 @@
 // Navigation code here
 header {
   width: 100%;
-  height: @headerheight;
-  @media @desktop4k {
-    height: calc(@headerheight + 3.5vw);
-  }
+  color: @header-font-color;
   background-color: @nav-bg-color;
   border: 1px solid @nav-border-color;
+  font-size: 2rem;
 
   nav {
+    width: 100%;
     min-width: 300px;
-    @media @phone {
-      width: 415px;
-    }
-    @media @tablet {
-      width: fit-content;
-    }
-    @media @desktop {
-      width: 41vw;
-    }
-    @media @desktop4k {
-      width: 55vw;
-    }
-    margin: 0 auto;
 
     display: grid;
-    .grid(1fr 1fr, 1fr, 0, 0);
     text-align: center;
-    
+
+    @media @phone {
+      .grid(1fr 1fr, 1fr, 0, 0);
+      // 2 rows, 1 columns
+    }
+    @media @tablet {
+      .grid(1fr, 1.25fr 0.75fr, 0, 0);
+      // 1 rows, 2 columns
+    }
+
     div:first-child {
-      padding: 1.2em;
-      @media @phone {
-        padding: 1em;
-      }
+      .grid(1fr, 1fr, 0, 0);
     }
     div:last-child {
-      height: fit-content;
-      .grid(1fr, 1fr 1fr 1fr 1fr 1fr, 0, 0);
+      @media @phone {
+        .grid(1fr 1fr 1fr, 1fr, 0, 0);
+        // 3 rows, 1 columns
+        padding-bottom: 15px;
+      }
+      @media @tablet {
+        .grid(1fr 1fr 1fr, 1fr, 0, 0);
+        // 3 rows, 1 columns
+      }
+      @media @desktop {
+        .grid(1fr, 1.5fr 1fr 1fr, 0, 0);
+        // 1 rows, 3 columns
+      }
+      @media @desktop4k {
+        .grid(1fr, 2.5fr 1fr 1fr, 0, 0);
+        // 1 rows, 3 columns
+      }
+    }
 
+    div {
+      // height: fit-content;
+      // display: flex;
       a {
         line-height: 1.5;
-        font-size: 1.6rem;
-        padding: 5px;
-        text-decoration: none;
+        // font-size: 1.6rem;
+        margin: auto 0;
         color: @nav-font-color;
+        text-decoration: none;
+        @media @phone {
+          padding: 5px;
+        }
+        @media @tablet {
+          padding: 10px;
+        }
+        @media @desktop {
+          padding: 15px;
+        }
+        @media @desktop4k {
+          padding: 25px;
+        }        
+      }
+
+      a.Title {
+        font-weight: bold;
+        font-style: italic;
         text-align: center;
-        vertical-align: center;
+        @media @desktop4k {
+          text-align: left;
+        }
+      }
+      
+      a.Organization {
+        text-align: right;
+        grid-row-start: 1;
+        grid-row-end: 1;
+        grid-column-start: 1;
+        grid-column-end: 1;
+
+        @media @phone {
+          // 3 rows, 1 columns
+          text-align: center;
+        }
+        @media @tablet {
+          // 3 rows, 1 columns
+        text-align: right;
+        }
+      }
+      
+      a.User {
+        @media @phone {
+          text-align: center;
+          // 3 rows, 1 columns
+          grid-row-start: 2;
+          grid-row-end: 2;
+          grid-column-start: 1;
+          grid-column-end: 1;
+        }
+        @media @tablet {
+          text-align: right;
+          // 3 rows, 1 columns
+          grid-row-start: 2;
+          grid-row-end: 2;
+          grid-column-start: 1;
+          grid-column-end: 1;
+        }
+        @media @desktop {
+          text-align: center;
+          // 1 rows, 3 columns
+          grid-row-start: 1;
+          grid-row-end: 1;
+          grid-column-start: 2;
+          grid-column-end: 2;
+        }
+        @media @desktop4k {
+          text-align: center;
+          // 1 rows, 3 columns
+          grid-row-start: 1;
+          grid-row-end: 1;
+          grid-column-start: 2;
+          grid-column-end: 2;
+        }
+      }
+      
+      a.SignIn {
+        text-align: right;
+        @media @phone {
+          text-align: center;
+          // 3 rows, 1 columns
+          grid-row-start: 3;
+          grid-row-end: 3;
+          grid-column-start: 1;
+          grid-column-end: 1;
+        }
+        @media @tablet {
+          // 3 rows, 1 columns
+          grid-row-start: 3;
+          grid-row-end: 3;
+          grid-column-start: 1;
+          grid-column-end: 1;
+        }
+        @media @desktop {
+          // 1 rows, 3 columns
+          grid-row-start: 1;
+          grid-row-end: 1;
+          grid-column-start: 3;
+          grid-column-end: 3;
+        }
+        @media @desktop4k {
+          // 1 rows, 3 columns
+          grid-row-start: 1;
+          grid-row-end: 1;
+          grid-column-start: 3;
+          grid-column-end: 3;
+        }
+      }
+    }
+
+    @media (min-width: 0px) {
+      .desktop-only {
+        display: none;
+      }
+      .not-desktop {
+        display: inline;
+      }
+    }
+    @media @desktop {
+      .desktop-only {
+        display: inline;
+      }
+      .not-desktop {
+        display: none;
       }
     }
   }
