Implement ul styling & image slider w/random pics.

--- a/css/index.css
+++ b/css/index.css
@@ -486,6 +486,9 @@ header nav div a.SignIn {
 .home .visit-places p {
   margin-top: 13px;
 }
+.home .visit-places ul {
+  list-style: disc inside;
+}
 .home .walk {
   margin-top: 60px;
   border-top: 1px solid #DAE3E5;
