--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,10 @@
 @header-font-color: @rich-black;
 
 @nav-font-color: @platinum;
+@nav-link-color: @baby-blue-eyes;
+@nav-visited-color: @pale-aqua;
+@nav-hover-color: @cyan-azure;
+@nav-active-color: @lapis-lazuli;
 @nav-bg-color: @granite-gray;
 @nav-border-color: @platinum;
 
