--- a/css/index.css
+++ b/css/index.css
@@ -503,6 +503,10 @@ header nav div a.SignIn {
 .home .visit-places ul {
   list-style: disc inside;
 }
+.home .carousel-inner img {
+  width: 100%;
+  height: 100%;
+}
 .home .walk {
   margin-top: 60px;
   border-top: 1px solid #DAE3E5;
