--- a/less/home-page.less
+++ b/less/home-page.less
@@ -99,6 +99,11 @@
     }
   }
 
+  .carousel-inner img {
+    width: 100%;
+    height: 100%;
+  }
+
   .walk {
     margin-top: 60px;
     @media @phone {
