--- a/less/home-page.less
+++ b/less/home-page.less
@@ -27,15 +27,6 @@
       width: 100%;
       border-radius: 5px;
     }
-
-    h2 {
-      padding: 15px;
-    }
-
-    p {
-      padding:0 15px;
-    }
-  
   }
 
   .intro-images {
@@ -84,8 +75,6 @@
   }
 
   .visit-places {
-    padding: 15px;
-
     h3 {
       margin-top: 11px;
     }
@@ -96,6 +85,8 @@
 
     ul {
       list-style: disc inside;
+      font-size: 1.25em;
+      line-height: 1.5em;
     }
   }
 
