--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,7 +4,7 @@ header {
   color: @header-font-color;
   background-color: @nav-bg-color;
   border: 1px solid @nav-border-color;
-  font-size: 2rem;
+  font-size: 1.75rem;
 
   nav {
     width: 100%;
@@ -75,7 +75,7 @@ header {
           padding: 10px;
         }
         @media @desktop {
-          padding: 15px;
+          padding: 15px 10px;
         }
         @media @desktop4k {
           padding: 25px;
