--- a/css/index.css
+++ b/css/index.css
@@ -154,18 +154,25 @@ h5 {
 }
 h1 {
   font-size: 4.2rem;
+  padding: 15px 0;
 }
 h2 {
   font-size: 3.2rem;
+  padding: 12.5px 0;
 }
 h3 {
   font-size: 2.8rem;
+  padding: 10px 0;
 }
 p {
   font-size: 1.6rem;
   line-height: 1.4;
+  padding: 15px 0;
 }
-.container {
+section {
+  padding: 15px 0;
+}
+.main-container {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
@@ -175,7 +182,7 @@ header {
   color: #04080F;
   background-color: #605F5E;
   border: 1px solid #DAE3E5;
-  font-size: 2rem;
+  font-size: 1.75rem;
 }
 header nav {
   width: 100%;
@@ -277,7 +284,7 @@ header nav div a:active {
 }
 @media (min-width: 1000px) {
   header nav div a {
-    padding: 15px;
+    padding: 15px 10px;
   }
 }
 @media (min-width: 1400px) {
@@ -432,12 +439,6 @@ header nav div a.SignIn {
   width: 100%;
   border-radius: 5px;
 }
-.home .intro h2 {
-  padding: 15px;
-}
-.home .intro p {
-  padding: 0 15px;
-}
 .home .intro-images {
   display: flex;
   flex-wrap: wrap;
@@ -491,9 +492,6 @@ header nav div a.SignIn {
     display: block;
   }
 }
-.home .visit-places {
-  padding: 15px;
-}
 .home .visit-places h3 {
   margin-top: 11px;
 }
@@ -502,6 +500,8 @@ header nav div a.SignIn {
 }
 .home .visit-places ul {
   list-style: disc inside;
+  font-size: 1.25em;
+  line-height: 1.5em;
 }
 .home .carousel-inner img {
   width: 100%;
