--- a/less/global.less
+++ b/less/global.less
@@ -26,22 +26,30 @@ h1, h2, h3, h4, h5 {
 
 h1 {
   font-size: 4.2rem;
+  padding: 15px 0;
 }
 
 h2 {
   font-size: 3.2rem;
+  padding: 12.5px 0;
 }
 
 h3 {
   font-size: 2.8rem;
+  padding: 10px 0;
 }
 
 p {
   font-size: 1.6rem;
   line-height: 1.4;
+  padding: 15px 0;
 }
 
-.container {
+section {
+  padding: 15px 0;
+}
+
+.main-container {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;  
