--- a/less/variables.less
+++ b/less/variables.less
@@ -41,7 +41,7 @@
 @max-width-desktop: 95vw;
 @max-width-desktop4k: 97.5vw;
 
-@padding-mobile: 0;
+@padding-mobile: 1vw;
 @padding-tablet: 2vw;
 @padding-desktop: 8vw;
 @padding-desktop4k: 10vw;
