Nav styling updates. Add Home Page Flex container.

--- a/css/index.css
+++ b/css/index.css
@@ -193,7 +193,7 @@ header nav {
 @media (max-width: 500px) {
   header nav {
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1.25fr 1fr;
     grid-template-columns: 1fr;
     grid-row-gap: 0;
     grid-column-gap: 0;
@@ -202,8 +202,8 @@ header nav {
 @media (min-width: 501px) {
   header nav {
     display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1.25fr 0.75fr;
+    grid-template-rows: 1.5fr;
+    grid-template-columns: 1fr 0.75fr;
     grid-row-gap: 0;
     grid-column-gap: 0;
   }
@@ -218,7 +218,7 @@ header nav div:first-child {
 @media (max-width: 500px) {
   header nav div:last-child {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr;
     grid-row-gap: 0;
     grid-column-gap: 0;
@@ -228,7 +228,7 @@ header nav div:first-child {
 @media (min-width: 501px) {
   header nav div:last-child {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr;
     grid-row-gap: 0;
     grid-column-gap: 0;
@@ -238,7 +238,7 @@ header nav div:first-child {
   header nav div:last-child {
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 1.5fr 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
     grid-row-gap: 0;
     grid-column-gap: 0;
   }
@@ -247,7 +247,7 @@ header nav div:first-child {
   header nav div:last-child {
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 2.5fr 1fr 1fr;
+    grid-template-columns: 2.5fr 1fr;
     grid-row-gap: 0;
     grid-column-gap: 0;
   }
@@ -302,7 +302,7 @@ header nav div a.Title {
     text-align: left;
   }
 }
-header nav div a.Organization {
+header nav div a.About {
   text-align: right;
   grid-row-start: 1;
   grid-row-end: 1;
@@ -310,49 +310,13 @@ header nav div a.Organization {
   grid-column-end: 1;
 }
 @media (max-width: 500px) {
-  header nav div a.Organization {
+  header nav div a.About {
     text-align: center;
   }
 }
 @media (min-width: 501px) {
-  header nav div a.Organization {
+  header nav div a.About {
     text-align: right;
-  }
-}
-@media (max-width: 500px) {
-  header nav div a.User {
-    text-align: center;
-    grid-row-start: 2;
-    grid-row-end: 2;
-    grid-column-start: 1;
-    grid-column-end: 1;
-  }
-}
-@media (min-width: 501px) {
-  header nav div a.User {
-    text-align: right;
-    grid-row-start: 2;
-    grid-row-end: 2;
-    grid-column-start: 1;
-    grid-column-end: 1;
-  }
-}
-@media (min-width: 1000px) {
-  header nav div a.User {
-    text-align: center;
-    grid-row-start: 1;
-    grid-row-end: 1;
-    grid-column-start: 2;
-    grid-column-end: 2;
-  }
-}
-@media (min-width: 1400px) {
-  header nav div a.User {
-    text-align: center;
-    grid-row-start: 1;
-    grid-row-end: 1;
-    grid-column-start: 2;
-    grid-column-end: 2;
   }
 }
 header nav div a.SignIn {
@@ -361,16 +325,16 @@ header nav div a.SignIn {
 @media (max-width: 500px) {
   header nav div a.SignIn {
     text-align: center;
-    grid-row-start: 3;
-    grid-row-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 2;
     grid-column-start: 1;
     grid-column-end: 1;
   }
 }
 @media (min-width: 501px) {
   header nav div a.SignIn {
-    grid-row-start: 3;
-    grid-row-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 2;
     grid-column-start: 1;
     grid-column-end: 1;
   }
@@ -379,16 +343,16 @@ header nav div a.SignIn {
   header nav div a.SignIn {
     grid-row-start: 1;
     grid-row-end: 1;
-    grid-column-start: 3;
-    grid-column-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 2;
   }
 }
 @media (min-width: 1400px) {
   header nav div a.SignIn {
     grid-row-start: 1;
     grid-row-end: 1;
-    grid-column-start: 3;
-    grid-column-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 2;
   }
 }
 @media (min-width: 0px) {
