--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,37 @@
 header {
   width: 100%;
   color: @header-font-color;
-  background-color: @nav-bg-color;
+  // background-color: @nav-bg-color;
+    @media @phone {
+      background:
+        linear-gradient(
+          to bottom,
+          @platinum,
+          @granite-gray 5%,
+          @granite-gray 95%,
+          @platinum
+        );
+    }
+    @media @tablet {
+      background:
+        linear-gradient(
+          to bottom,
+          @platinum,
+          @granite-gray 10%,
+          @granite-gray 90%,
+          @platinum
+        );
+    }
+    @media @desktop {
+      background:
+        linear-gradient(
+          to bottom,
+          @platinum,
+          @granite-gray 15%,
+          @granite-gray 85%,
+          @platinum
+        );
+    }
   border: 1px solid @nav-border-color;
   font-size: 1.75rem;
 
@@ -15,7 +45,7 @@ header {
 
     @media @phone {
       // 2 rows, 1 columns
-      .grid(1.25fr 1fr, 1fr, 0, 0);
+      .grid(1fr 1fr, 1fr, 0, 0);
     }
     @media @tablet {
       // 1 rows, 2 columns
@@ -55,24 +85,28 @@ header {
         &:link {
           color: @nav-link-color;
           text-decoration: none;
+          transition: all .33s ease-in-out;
         }
         &:visited {
           color: @nav-visited-color;
           text-decoration: none;
+          transition: all .33s ease-in-out;
         }
         &:hover {
           color: @nav-hover-color;
           text-decoration: underline;
+          transition: all .33s ease-in-out;
         }
         &:active {
           color: @nav-active-color;
           text-decoration: underline;
+          transition: all .33s ease-in-out;
         }
         @media @phone {
           padding: 5px;
         }
         @media @tablet {
-          padding: 10px;
+          padding: 0 10px;
         }
         @media @desktop {
           padding: 15px 10px;
@@ -86,6 +120,9 @@ header {
         font-weight: bold;
         font-style: italic;
         text-align: center;
+        @media @tablet {
+          padding: 25px 10px;
+        }
         @media @desktop {
           text-align: left;
         }
@@ -105,6 +142,12 @@ header {
         @media @tablet {
           // 2 rows, 1 columns
         text-align: right;
+        margin: 0;
+        margin-top: auto;
+        margin-right: 10px;
+        }
+        @media @desktop {
+          margin: auto 0;
         }
       }
       
@@ -119,6 +162,9 @@ header {
           grid-column-end: 1;
         }
         @media @tablet {
+          margin: 0;
+          margin-bottom: auto;
+          margin-right: 10px;
           // 2 rows, 1 columns
           grid-row-start: 2;
           grid-row-end: 2;
@@ -126,6 +172,8 @@ header {
           grid-column-end: 1;
         }
         @media @desktop {
+          margin: auto 0;
+          margin-right: 20px;
           // 1 rows, 2 columns
           grid-row-start: 1;
           grid-row-end: 1;
