--- a/less/variables.less
+++ b/less/variables.less
@@ -5,9 +5,9 @@
 
 @nav-font-color: @platinum;
 @nav-link-color: @baby-blue-eyes;
-@nav-visited-color: @pale-aqua;
-@nav-hover-color: @cyan-azure;
-@nav-active-color: @lapis-lazuli;
+@nav-visited-color: @cyan-azure;
+@nav-hover-color: @platinum;
+@nav-active-color: @pale-aqua;
 @nav-bg-color: @granite-gray;
 @nav-border-color: @platinum;
 
