--- a/css/index.css
+++ b/css/index.css
@@ -153,36 +153,80 @@ h5 {
   color: #04080F;
 }
 h1 {
-  font-size: 4.2rem;
   padding: 15px 0;
 }
+@media (max-width: 500px) {
+  h1 {
+    font-size: 4rem;
+  }
+}
+@media (min-width: 501px) {
+  h1 {
+    font-size: 4.2rem;
+  }
+}
 h2 {
-  font-size: 3.2rem;
   padding: 12.5px 0;
 }
+@media (max-width: 500px) {
+  h2 {
+    font-size: 3rem;
+  }
+}
+@media (min-width: 501px) {
+  h2 {
+    font-size: 3.2rem;
+  }
+}
 h3 {
-  font-size: 2.8rem;
   padding: 10px 0;
 }
+@media (max-width: 500px) {
+  h3 {
+    font-size: 2.5rem;
+  }
+}
+@media (min-width: 501px) {
+  h3 {
+    font-size: 2.8rem;
+  }
+}
 p {
-  font-size: 1.6rem;
+  font-size: 1.6em;
   line-height: 1.4;
+  padding: 15px 0;
+}
+ul {
   padding: 15px 0;
 }
 section {
   padding: 15px 0;
 }
 .main-container {
-  max-width: 800px;
+  max-width: 1200px;
   width: 100%;
   margin: 0 auto;
 }
 header {
   width: 100%;
   color: #04080F;
-  background-color: #605F5E;
   border: 1px solid #DAE3E5;
   font-size: 1.75rem;
+}
+@media (max-width: 500px) {
+  header {
+    background: linear-gradient(to bottom, #DAE3E5, #605F5E 5%, #605F5E 95%, #DAE3E5);
+  }
+}
+@media (min-width: 501px) {
+  header {
+    background: linear-gradient(to bottom, #DAE3E5, #605F5E 10%, #605F5E 90%, #DAE3E5);
+  }
+}
+@media (min-width: 1000px) {
+  header {
+    background: linear-gradient(to bottom, #DAE3E5, #605F5E 15%, #605F5E 85%, #DAE3E5);
+  }
 }
 header nav {
   width: 100%;
@@ -193,7 +237,7 @@ header nav {
 @media (max-width: 500px) {
   header nav {
     display: grid;
-    grid-template-rows: 1.25fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr;
     grid-row-gap: 0;
     grid-column-gap: 0;
@@ -259,18 +303,22 @@ header nav div a {
 header nav div a:link {
   color: #A1C6EA;
   text-decoration: none;
+  transition: all 0.33s ease-in-out;
 }
 header nav div a:visited {
-  color: #BBD1EA;
+  color: #507DBC;
   text-decoration: none;
+  transition: all 0.33s ease-in-out;
 }
 header nav div a:hover {
-  color: #507DBC;
+  color: #DAE3E5;
   text-decoration: underline;
+  transition: all 0.33s ease-in-out;
 }
 header nav div a:active {
-  color: #247BA0;
+  color: #BBD1EA;
   text-decoration: underline;
+  transition: all 0.33s ease-in-out;
 }
 @media (max-width: 500px) {
   header nav div a {
@@ -279,7 +327,7 @@ header nav div a:active {
 }
 @media (min-width: 501px) {
   header nav div a {
-    padding: 10px;
+    padding: 0 10px;
   }
 }
 @media (min-width: 1000px) {
@@ -296,6 +344,11 @@ header nav div a.Title {
   font-weight: bold;
   font-style: italic;
   text-align: center;
+}
+@media (min-width: 501px) {
+  header nav div a.Title {
+    padding: 25px 10px;
+  }
 }
 @media (min-width: 1000px) {
   header nav div a.Title {
@@ -317,6 +370,14 @@ header nav div a.About {
 @media (min-width: 501px) {
   header nav div a.About {
     text-align: right;
+    margin: 0;
+    margin-top: auto;
+    margin-right: 10px;
+  }
+}
+@media (min-width: 1000px) {
+  header nav div a.About {
+    margin: auto 0;
   }
 }
 header nav div a.SignIn {
@@ -333,6 +394,9 @@ header nav div a.SignIn {
 }
 @media (min-width: 501px) {
   header nav div a.SignIn {
+    margin: 0;
+    margin-bottom: auto;
+    margin-right: 10px;
     grid-row-start: 2;
     grid-row-end: 2;
     grid-column-start: 1;
@@ -341,6 +405,8 @@ header nav div a.SignIn {
 }
 @media (min-width: 1000px) {
   header nav div a.SignIn {
+    margin: auto 0;
+    margin-right: 20px;
     grid-row-start: 1;
     grid-row-end: 1;
     grid-column-start: 2;
@@ -403,165 +469,163 @@ header nav div a.SignIn {
   width: 100%;
   border-radius: 5px;
 }
-.home .intro-images {
+.home .intro-flex {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   width: 100%;
 }
 @media (min-width: 501px) {
-  .home .intro-images {
+  .home .intro-flex {
     flex-direction: row-reverse;
   }
 }
 @media (min-width: 1000px) {
-  .home .intro-images {
+  .home .intro-flex {
     flex-direction: row;
   }
 }
-.home .intro-images img {
-  display: grid;
-  grid-column-gap: 5vw;
-  grid-template-rows: 1fr;
-  margin: 20px 2.5%;
-  border-radius: 20px;
-  height: 100%;
-}
-@media (max-width: 500px) {
-  .home .intro-images img {
-    grid-template-columns: 1fr;
-    display: none;
-  }
-  .home .intro-images img:first-child {
-    display: block;
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
 @media (min-width: 501px) {
-  .home .intro-images img {
-    grid-template-columns: 1fr 1fr;
+  .home .intro-flex .intro-item {
+    width: 100%;
+  }
+}
+@media (min-width: 1000px) {
+  .home .intro-flex .intro-item {
+    width: 48%;
+  }
+}
+@media (min-width: 1400px) {
+  .home .intro-flex .intro-item {
     width: 45%;
   }
-  .home .intro-images img:first-child {
-    display: none;
+}
+.home .intro-flex .features ul {
+  list-style: disc inside;
+  line-height: 2em;
+}
+.home .intro-flex .features ul li {
+  font-size: 1.3em;
+}
+.home h1,
+.home h2,
+.home h3 {
+  position: relative;
+  padding-bottom: 2px;
+  text-decoration: none;
+}
+.home h1::after,
+.home h2::after,
+.home h3::after {
+  content: "";
+  position: absolute;
+  bottom: 2px;
+  left: 0;
+  height: 3px;
+  background: #1D3461;
+  background: linear-gradient(to left, transparent 0%, #1F487E 25%, #1D3461 50%, #247BA0 75%, transparent 100%);
+}
+.home h1::after {
+  width: 25%;
+}
+@media (max-width: 500px) {
+  .home h2.welcome::after {
+    width: calc(165px + 0.25vw);
+    max-width: 300px;
+  }
+}
+@media (min-width: 501px) {
+  .home h2.welcome::after {
+    width: calc(170px + 2vw);
   }
 }
 @media (min-width: 1000px) {
-  .home .intro-images img {
-    grid-template-columns: 1fr 1fr 1fr;
-    width: 28%;
-  }
-  .home .intro-images img:first-child {
-    display: block;
+  .home h2.welcome::after {
+    width: calc(200px + 0.25vw);
   }
 }
-.home .visit-places h3 {
-  margin-top: 11px;
+@media (min-width: 1400px) {
+  .home h2.welcome::after {
+    width: calc(150px + 5vw);
+  }
 }
-.home .visit-places p {
-  margin-top: 13px;
+@media (max-width: 500px) {
+  .home h2.features-benefits::after {
+    width: calc(325px + 0.25vw);
+    max-width: 300px;
+  }
 }
-.home .visit-places ul {
-  list-style: disc inside;
-  font-size: 1.25em;
-  line-height: 1.5em;
+@media (min-width: 501px) {
+  .home h2.features-benefits::after {
+    width: calc(310px + 7vw);
+  }
 }
-.home .carousel-inner img {
+@media (min-width: 1000px) {
+  .home h2.features-benefits::after {
+    width: calc(315px + 7vw);
+  }
+}
+@media (min-width: 1400px) {
+  .home h2.features-benefits::after {
+    width: calc(325px + 9vw);
+  }
+}
+@media (max-width: 500px) {
+  .home h3.samples::after {
+    width: calc(340px + 0.25vw);
+    max-width: 300px;
+  }
+}
+@media (min-width: 501px) {
+  .home h3.samples::after {
+    width: calc(325px + 7vw);
+  }
+}
+@media (min-width: 1000px) {
+  .home h3.samples::after {
+    width: calc(330px + 7vw);
+  }
+}
+@media (min-width: 1400px) {
+  .home h3.samples::after {
+    width: calc(340px + 9vw);
+  }
+}
+.home .carousel-container {
+  margin: 0 auto;
+}
+@media (max-width: 500px) {
+  .home .carousel-container {
+    width: 100%;
+  }
+}
+@media (min-width: 501px) {
+  .home .carousel-container {
+    width: 95%;
+  }
+}
+@media (min-width: 1000px) {
+  .home .carousel-container {
+    width: 90%;
+  }
+}
+@media (min-width: 1400px) {
+  .home .carousel-container {
+    width: 80%;
+  }
+}
+.home .carousel-container #myCarousel {
+  padding: 15px 0;
+  max-width: 99%;
+}
+.home .carousel-container .carousel-indicators {
+  bottom: 5%;
+}
+.home .carousel-container .carousel-inner img {
   width: 100%;
   height: 100%;
 }
-.home .walk {
-  margin-top: 60px;
-  border-top: 1px solid #DAE3E5;
-  display: flex;
-  justify-content: center;
-}
-@media (max-width: 500px) {
-  .home .walk {
-    margin-top: 20px;
-  }
-}
-@media (min-width: 501px) {
-  .home .walk {
-    margin-top: 20px;
-  }
-}
-@media (min-width: 1000px) {
-  .home .walk {
-    margin-top: 50px;
-  }
-}
-@media (max-width: 500px) {
-  .home .walk {
-    padding-top: 20px;
-    flex-direction: column-reverse;
-  }
-}
-@media (min-width: 501px) {
-  .home .walk {
-    padding-top: 20px;
-    flex-direction: column-reverse;
-  }
-}
-@media (min-width: 1000px) {
-  .home .walk {
-    padding: 30px 50px 20px;
-    flex-direction: row;
-  }
-}
-@media (max-width: 500px) {
-  .home .walk .walk-text {
-    width: 92%;
-    margin: 20px auto;
-  }
-}
-@media (min-width: 501px) {
-  .home .walk .walk-text {
-    width: 92%;
-    margin: 20px auto;
-  }
-}
-@media (min-width: 1000px) {
-  .home .walk .walk-text {
-    width: 50%;
-  }
-}
-.home .walk .walk-text h3 {
-  margin-bottom: 10px;
-}
-.home .walk .walk-text p {
-  margin-bottom: 26px;
-}
-@media (max-width: 500px) {
-  .home .walk .walk-img {
-    width: 92%;
-    margin: 0 auto;
-  }
-}
-@media (min-width: 501px) {
-  .home .walk .walk-img {
-    width: 92%;
-    margin: 0 auto;
-  }
-}
-@media (min-width: 1000px) {
-  .home .walk .walk-img {
-    width: 46%;
-    margin: 20px auto;
-  }
-}
-.home .walk .walk-img img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
-}
-footer {
-  color: #04080F;
-  background: #605F5E;
-  padding: 20px 0;
-  border: 1px double #DAE3E5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.home .carousel-container .carousel-control-prev,
+.home .carousel-container .carousel-control-next {
+  width: 10%;
 }
