--- a/less/global.less
+++ b/less/global.less
@@ -25,23 +25,42 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-  font-size: 4.2rem;
   padding: 15px 0;
+  @media @phone {
+    font-size: 4rem;
+  }
+  @media @tablet {
+    font-size: 4.2rem;
+  }
 }
 
 h2 {
-  font-size: 3.2rem;
   padding: 12.5px 0;
+  @media @phone {
+    font-size: 3rem;
+  }
+  @media @tablet {
+    font-size: 3.2rem;
+  }
 }
 
 h3 {
-  font-size: 2.8rem;
   padding: 10px 0;
+  @media @phone {
+    font-size: 2.5rem;
+  }
+  @media @tablet {
+    font-size: 2.8rem;
+  }
 }
 
 p {
-  font-size: 1.6rem;
+  font-size: 1.6em;
   line-height: 1.4;
+  padding: 15px 0;
+}
+
+ul {
   padding: 15px 0;
 }
 
@@ -50,8 +69,8 @@ section {
 }
 
 .main-container {
-  max-width: 800px;
+  max-width: 1200px;
   width: 100%;
-  margin: 0 auto;  
+  margin: 0 auto;
 }
 
