--- a/less/home-page.less
+++ b/less/home-page.less
@@ -29,152 +29,140 @@
     }
   }
 
-  .intro-images {
+  .intro-flex {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+
     @media @tablet {
       flex-direction: row-reverse;
     }
     @media @desktop {
       flex-direction: row;
     }
-    width: 100%;
 
-    img {
-      display: grid;
-      grid-column-gap: 5vw;
-      grid-template-rows: 1fr;
-      margin: 20px 2.5%;
-      border-radius: 20px;
-      height: 100%;
-      @media @phone {
-        grid-template-columns: 1fr;
-        display: none;
-        &:first-child {
-          display: block;
-          width: 90%;
-          margin-left: auto;
-          margin-right: auto;
-        }
-      }
+    .intro-item {
       @media @tablet {
-        grid-template-columns: 1fr 1fr;
-        width: 45%;
-        &:first-child {
-          display: none;
-        }
-      }
-      @media @desktop {
-        grid-template-columns: 1fr 1fr 1fr;
-        width: 28%;
-        &:first-child {
-          display: block;
-        }
-      }
-    }
-  }
-
-  .visit-places {
-    h3 {
-      margin-top: 11px;
-    }
-
-    p {
-      margin-top: 13px;
-    }
-
-    ul {
-      list-style: disc inside;
-      font-size: 1.25em;
-      line-height: 1.5em;
-    }
-  }
-
-  .carousel-inner img {
-    width: 100%;
-    height: 100%;
-  }
-
-  .walk {
-    margin-top: 60px;
-    @media @phone {
-      margin-top: 20px;
-    }
-    @media @tablet {
-      margin-top: 20px;
-    }
-    @media @desktop {
-      margin-top: 50px;
-    }
-    border-top: 1px solid @main-border-color;
-    display: flex;
-    justify-content: center;
-    @media @phone {
-      padding-top: 20px;
-      flex-direction: column-reverse;
-    }
-    @media @tablet {
-      padding-top: 20px;
-      flex-direction: column-reverse;
-    }
-    @media @desktop {
-      padding: 30px 50px 20px;
-      flex-direction: row;
-    }
-
-    .walk-text {
-      @media @phone {
-        width: 92%;
-        margin: 20px auto;
-      }
-      @media @tablet {
-        width: 92%;
-        margin: 20px auto;
-      }
-      @media @desktop {
-        width: 50%;
-      }
-
-      h3 {
-        margin-bottom: 10px;
-      }
-
-      p {
-        margin-bottom: 26px;
-      }
-
-      // .btn {
-      //   @media @phone {
-      //     .btn(100%, 26px, 1.9em);
-      //   }
-      //   @media @tablet {
-      //     .btn(100%, 26px, 1.9em);
-      //   }
-      //   @media @desktop {
-      //     .btn(30%, 10px, 1.9em);
-      //   }
-      // }
-    }
-
-    .walk-img {
-      @media @phone {
-        width: 92%;
-        margin: 0 auto;
-      }
-      @media @tablet {
-        width: 92%;
-        margin: 0 auto;
-      }
-      @media @desktop {
-        width: 46%;
-        margin: 20px auto;
-      }
-      
-      img {
         width: 100%;
-        height: auto;
-        border-radius: 10px;
       }
+      @media @desktop {
+        width: 48%;
+      }
+      @media @desktop4k {
+        width: 45%;
+      }
+    }
+
+    .features {
+      ul {
+        list-style: disc inside;
+        line-height: 2em;
+        li {
+          font-size: 1.3em;
+        }
+      }
+    }
+  }
+
+  h1,h2,h3 {
+    position: relative;
+    padding-bottom: 2px;
+    text-decoration: none;
+  }
+  h1::after,h2::after,h3::after {
+    content: "";
+    position: absolute;
+    bottom: 2px;
+    left: 0;
+    height: 3px;
+    background: @space-cadet;
+    background: linear-gradient(
+      to left, 
+      transparent 0%,
+      @dark-cerulean 25%,
+      @space-cadet 50%,
+      @lapis-lazuli 75%,
+      transparent 100%
+    );
+  }
+  h1::after {
+    width: 25%;
+  }
+  h2.welcome::after {
+    @media @phone {
+      width: calc(165px + 0.25vw);
+      max-width: 300px;
+    }
+    @media @tablet {
+      width: calc(170px + 2vw);
+    }
+    @media @desktop {
+      width: calc(200px + 0.25vw);
+    }
+    @media @desktop4k {
+      width: calc(150px + 5vw);
+    }
+  }
+  h2.features-benefits::after {
+    @media @phone {
+      width: calc(325px + 0.25vw);
+      max-width: 300px;
+    }
+    @media @tablet {
+      width: calc(310px + 7vw);
+    }
+    @media @desktop {
+      width: calc(315px + 7vw);
+    }
+    @media @desktop4k {
+      width: calc(325px + 9vw);
+    }
+  }
+  h3.samples::after {
+    @media @phone {
+      width: calc(340px + 0.25vw);
+      max-width: 300px;
+    }
+    @media @tablet {
+      width: calc(325px + 7vw);
+    }
+    @media @desktop {
+      width: calc(330px + 7vw);
+    }
+    @media @desktop4k {
+      width: calc(340px + 9vw);
+    }
+  }
+
+  .carousel-container {
+    margin: 0 auto;
+    @media @phone {
+      width: 100%;
+    }
+    @media @tablet {
+      width: 95%;
+    }
+    @media @desktop {
+      width: 90%;
+    }
+    @media @desktop4k {
+      width: 80%;
+    }
+
+    #myCarousel {
+      padding: 15px 0;
+      max-width: 99%;
+    }
+    .carousel-indicators {
+      bottom: 5%;
+    }
+    .carousel-inner img {
+      width: 100%;
+      height: 100%;
+    }
+    .carousel-control-prev,.carousel-control-next {
+      width: 10%;
     }
   }
 }// home
