--- a/less/global.less
+++ b/less/global.less
@@ -57,11 +57,11 @@ h3 {
 p {
   font-size: 1.6em;
   line-height: 1.4;
-  padding: 15px 0;
+  // padding: 15px 0;
 }
 
 ul {
-  padding: 15px 0;
+  // padding: 15px 0;
 }
 
 section {
